
2010-05-10 Franz Holzinger  <franz@ttproducts.de>

	* Initial release which does nothing