@@ -1,0 +1,2 @@
+.right 		{ display:none; }
+.content 	{ margin:0px 0px 0px 220px; }
