@@ -1,0 +1,43 @@
+<!DOCTYPE html
+     PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="de" lang="de">
+<head>
+<title>mastertemplate</title>
+<meta name="author" content="Mo">
+<meta name="generator" content="Ulli Meybohms HTML EDITOR">
+<link rel="stylesheet" type="text/css" href="mastertemplate_FILES/default.css" />
+
+</head>
+<body>
+<!--###DOCUMENT### begin -->
+<div class="header">
+  <div class="logo">
+     ###LOGO###
+  </div>
+  <div class="topmenu">
+     ###MAINMENU###
+  </div>
+</div>
+<div class="breadcrumb">
+    ###BREADCRUMB###
+</div>
+<div class="middle">
+  <div class="left">
+    ###LEFT###
+  </div>
+  <div class="right">
+     ###RIGHT###
+  </div>
+  <div class="content">
+      ###CONTENT###
+  </div>
+  <div class="clear">
+  </div>
+</div>
+<div class="footer">
+    ###FOOTER###
+</div>
+<!--###DOCUMENT### end -->
+</body>
+</html>
