@@ -1,0 +1,63 @@
+* { padding:0px; margin:0px; }
+
+div {
+	border:1px solid blue;
+	padding:2px;
+}
+
+.header {
+	background-image:url(...);
+	background-color:#ffcccc;
+}
+
+.logo {
+	background-image:url(...);
+	background-color:#ffccff;
+}
+
+.topmenu {
+	background-color:#ffffcc;
+}
+
+.breadcrumb {
+	background-color:#ffffcc;
+}
+
+.middle {
+	background-color:#ccffcc;
+}
+
+.left {
+	/*background-color:#ccffff;*/
+	float:left;
+	width:200px;
+}
+
+.submenu {
+	/*background-color:#ccccff;*/
+}
+
+.right {
+	float:right;
+	width:200px;
+	background-color:#ccffaa;
+}
+
+.content_narrow,
+.content {
+	background-color:#aaffcc;
+	margin: 0px 220px;
+}
+
+.content_wide {
+	background-color:#aaffcc;
+	margin: 0px 0px 0px 220px;
+}
+
+.clear {
+	clear:both;
+}
+
+.footer {
+	background-color:#aaffaa;
+}
