@@ -1,0 +1,27 @@
+##
+## @package TYPO3
+## @subpackage mastertemplate
+## @version $Id$
+##
+
+temp.footer = COA
+temp.footer {
+	10 = HMENU
+	10 {
+		special = directory
+		special.value = 10
+		1 = TMENU
+		1 {
+			noBlur = 1
+			wrap = <ul>| </ul>
+			NO {
+				wrapItemAndSub = <li> | </li>
+			}
+			ACT < .NO
+			ACT = 1
+			#ACT.ATagParams = class="menu_act_a"
+		}
+	}
+	#999 = TEXT
+	#999.value=footer
+}
